==> wbasser/SoftwareLibraries/HAL/NXP/KinetisK25/UART/Core-TaskManager/Trunk/Uart.c <==
#include "UART/Uart.h"
#include "Clock/Clock.h"
#include "Interrupt/Interrupt.h"
#define BUFCTL_SIZE         sizeof( BUFCTL )
#define LCLCTL_SIZE         sizeof( LCLCTL )
#define UARTPTR_SIZE      sizeof( UARTPTR )

void Uart_Initialize( void )
{
  PUARTDEF                    ptDef;
  PLCLCTL                     ptCtl;
  UARTDEVENUM                 eDev;
  
  // for each defined UART
  for ( eDev = 0; eDev < UART_DEV_ENUM_MAX; eDev++ )
  {
    // get pointer to the definition/control structures
    ptDef = ( PUARTDEF )&atUartDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];

    // clear the receive/transmit buffers
    ptCtl->tRxBuf.wWrIdx = ptCtl->tRxBuf.wRdIdx = ptCtl->tRxBuf.wCount = 0;
    ptCtl->tTxBuf.wWrIdx = ptCtl->tTxBuf.wRdIdx = ptCtl->tTxBuf.wCount = 0;
    
    // get the uart
    GetUartPointer( ptDef->eChan );
    
    // map physical to definition
    aePhyToDefMap[ ptDef->eChan ] = eDev;
    
    // process accordingly
    switch( ptDef->eChan )
    {
      case UART_CHAN_0 :
        ConfigureUart0( ptDef );
        break;
        
      case UART_CHAN_1 :
      case UART_CHAN_2 :
        ConfigureUartx( ptDef );
        break;
        
      default :
        break;
    }
  }
}

UARTERR Uart_Write( UARTDEVENUM eDev, PU8 pnData, U16 wLength, PU16 pwBytesWritten )
{
  UARTERR       eError = UART_ERR_NONE;
  PUARTDEF      ptDef;
  PLCLCTL       ptCtl;
  U16           wBytesRemaining, wIdx;
 
  // check for a valid UART
  if ( eDev < UART_DEV_ENUM_MAX )
  {
    // set the bytes written to zero
    *pwBytesWritten = 0;

    // get pointers to the control/def structure
    ptDef = ( PUARTDEF )&atUartDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    
    // get the uart
    GetUartPointer( ptDef->eChan );

    // compute the bytes written
    wBytesRemaining = ptDef->wTxBufSize - ptCtl->tTxBuf.wCount;
    *pwBytesWritten = MIN( wBytesRemaining, wLength );
    
    // for each byte
    Interrupt_Disable( );
    for ( wIdx = 0; wIdx < *pwBytesWritten; wIdx++ )
    {
      // put in buffer/adjust pointer/increment count
      *( ptDef->pnTxBuffer + ptCtl->tTxBuf.wWrIdx++ ) = *( pnData + wIdx );
      ptCtl->tTxBuf.wWrIdx %= ptDef->wTxBufSize;
      ptCtl->tTxBuf.wCount++;
    }

    // enable the transmitter 
    if ( ptDef->pvCallback != NULL )
    {
      // call it
      ptDef->pvCallback( UART_IRQ_EVENT_TXENB, 0, ptDef->eXmtCtlPin );
    }

    // enable the data register enmpty interrupt
    switch( ptDef->eChan )
    {
      case UART_CHAN_0 :
        tUartPtr.ptUart0->C2 |= ( UART0_C2_TCIE_MASK | UART0_C2_TIE_MASK );
        break;
        
      case UART_CHAN_1 :
      case UART_CHAN_2 :
        tUartPtr.ptUartx->C2 |= ( UART_C2_TCIE_MASK | UART_C2_TIE_MASK );
        break;
        
      default :
        break;
    }
   
    // enable the interrupt
    Interrupt_Enable( );
  }
  else
  {
    // illegal device
    eError = UART_ERR_ILLDEV;
  }
  
  // return the error
  return( eError );
}

static void IrqCommonHandler( UARTDEVENUM eDev )
{
  PUARTDEF            ptDef;
  PLCLCTL             ptCtl;
  PVUARTINTCALLBACK  pvCallBack;

  // get pointer to the definition/control structures
  ptDef = ( PUARTDEF )&atUartDefs[ eDev ];
  ptCtl = &atLclCtls[ eDev ];
  
  // get the uart
  GetUartPointer( ptDef->eChan );
    
  // get the callback
  pvCallBack = ptDef->pvCallback;
  
  // determine 
  switch( ptDef->eChan )
  {
    case UART_CHAN_0 :
      IrqUart0Handler( ptDef, ptCtl );
      break;
      
    case UART_CHAN_1 :
    case UART_CHAN_2 :
      IrqUartxHandler( ptDef, ptCtl );
      break;
      
    default :
      break;
  }
}

static void GetUartPointer( UARTCHAN eChan )
{
  UART_Type*  aptUarts[ 2 ] = UART_BASES;

  switch( eChan )
  {
    case UART_CHAN_0 :
      tUartPtr.ptUart0 = UART0;
      break;
      
    case UART_CHAN_1 :
      tUartPtr.ptUartx = aptUarts[ 0 ];
      break;
    
    case UART_CHAN_2 :
      tUartPtr.ptUartx = aptUarts[ 1 ];
      break;
    
    default :
      break;
  }
}
